# SdkDocDemos

AndroidStudio/NewProjectWithC/: .gitignore
AndroidStudio/NewProjectWithC/app/: build.gradle
AndroidStudio/NewProjectWithC/app/src/androidTest/java/com/canmeizhexue/newprojectwithc/: ExampleInstrumentedTest.java
AndroidStudio/NewProjectWithC/app/src/main/: AndroidManifest.xml
AndroidStudio/NewProjectWithC/app/src/main/cpp/: native-lib.cpp
AndroidStudio/NewProjectWithC/app/src/main/res/layout/: activity_main.xml
AndroidStudio/NewProjectWithC/app/src/main/res/values/: strings.xml
AndroidStudio/NewProjectWithC/doc/: readme.txt
AndroidStudio/NewProjectWithC/gradle/wrapper/: gradle-wrapper.properties
AndroidStudio/ProjectAddCSupprot/: .gitignore
AndroidStudio/ProjectAddCSupprot/app/: CMakeLists.txt  build.gradle
AndroidStudio/ProjectAddCSupprot/app/src/androidTest/java/com/canmeizhexue/projectaddcsupprot/: ExampleInstrumentedTest.java
AndroidStudio/ProjectAddCSupprot/app/src/main/: AndroidManifest.xml
AndroidStudio/ProjectAddCSupprot/app/src/main/cpp/: native-lib.cpp
AndroidStudio/ProjectAddCSupprot/app/src/main/java/com/canmeizhexue/projectaddcsupprot/: MainActivity.java
AndroidStudio/ProjectAddCSupprot/app/src/main/res/layout/: activity_main.xml
AndroidStudio/ProjectAddCSupprot/app/src/main/res/values/: strings.xml
AndroidStudio/ProjectAddCSupprot/app/src/test/java/com/canmeizhexue/projectaddcsupprot/: ExampleUnitTest.java
AndroidStudio/ProjectAddCSupprot/doc/: readme.txt
AndroidStudio/ProjectAddCSupprot/gradle/wrapper/: gradle-wrapper.properties
FullVersion/app/: build.gradle
FullVersion/app/src/main/: AndroidManifest.xml
FullVersion/app/src/main/res/layout/: activity_main.xml  activity_second.xml
FullVersion/app/src/main/res/values/: strings.xml
FullVersion/config/: quality.gradle
FullVersion/config/quality/checkstyle/: checkstyle.xml  suppressions.xml
FullVersion/doc/: ReadMe  gitignore忽略文件规则
FullVersion/gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
